sample/error/eval_match_fun.bfr
let f (a, b) =
  a + b

codegen [
  $build { x } in
  + x (f 1 2)
]